tests/neg-custom-args/captures/i15923a.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i15923a.scala:7:21 ---------------------------------------
7 |  val leak = withCap(lcap => () => mkId(lcap)) // error
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^
  |Found:    (lcap: Cap^'s1) ->'s2 () ->'s3 Id[Cap^'s4]^'s5
  |Required: (lcap: Cap^) => () =>² Id[Cap^'s6]^'s7
  |
  |Note that capability cap cannot be included in outer capture set 's6.
  |
  |where:    =>  refers to a fresh root capability created in value leak when checking argument to parameter op of method withCap
  |          =>² refers to a root capability associated with the result type of (lcap: Cap^): () =>² Id[Cap^'s6]^'s7
  |          ^   refers to the universal root capability
  |          cap is a root capability associated with the result type of (): Id[Cap^'s4]^'s5
  |
  | longer explanation available when compiling with `-explain`
